--- a/02-characters.html
+++ b/02-characters.html
@@ -748,7 +748,7 @@ ga('send', {
 [1] "a" "b" "c" "d" "e"
 
 [[3]]
-[1] 0.02390327 0.02287800 0.30133504 0.32446475 1.23439029</code></pre>
+[1] -0.4034850  0.6651950 -0.1344302  1.2346755  0.4881856</code></pre>
 </div>
 </div>
 </section>
@@ -1100,7 +1100,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 </div> <!-- /content -->
 <footer class="footer">
   <div class="nav-footer">
-    <div class="nav-footer-left">Copyright 2024, <a href="https://www.gastonsanchez.com">Gaston Sanchez</a></div>   
+    <div class="nav-footer-left">© 2016-2024, <a href="https://www.gastonsanchez.com">Gaston Sanchez</a></div>   
     <div class="nav-footer-right"><a href="https://www.paypal.com/donate?business=ZF6U7K5MW25W2&amp;currency_code=USD" target="_blank">Donate via PayPal</a></div>
   </div>
 </footer>
