update rstrings quarto

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ ga('send', {
 <li><p><strong>R Coding Basics: An Introduction to the Basics of Coding in R</strong> <br> <a href="https://www.gastonsanchez.com/R-coding-basics" target="_blank">https://www.gastonsanchez.com/R-coding-basics</a></p></li>
 <li><p><strong>Rolling Dice: Exploring Simulations in Games of Chance with R</strong> <br> <a href="https://www.gastonsanchez.com/R-rolling-dice" target="_blank">https://www.gastonsanchez.com/R-rolling-dice</a></p></li>
 <li><p><strong>R for Strings: Handling Strings with R</strong> <br> <a href="https://www.gastonsanchez.com/R-for-strings" target="_blank">https://www.gastonsanchez.com/R-for-strings</a></p></li>
-<li><p><strong>Web Technologies in R: A Short Introduction to Web Technologies in R</strong> <br> &lt;https://www.gastonsanchez.com/R-web-technologies” target=“_blank”&gt;https://www.gastonsanchez.com/R-web-technologies</p></li>
+<li><p><strong>Web Technologies in R: A Short Introduction to Web Technologies in R</strong> <br> <a href="https://www.gastonsanchez.com/R-web-technologies" target="_blank">https://www.gastonsanchez.com/R-web-technologies</a></p></li>
 </ul>
 <hr>
 </section>
